{
    "name": "PCInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7521325a-0be7-4cb7-83e5-ddfe43aa68c1",
            "actions": [
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "2136dda0-33e5-4bfa-9859-e20329d83be7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "501b25e1-d157-47c5-9e38-c0761e09d386",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "45844425-e91a-4136-b625-59c703db0165",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "248390f9-a1a5-4b91-8fab-8e1008c2adf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Bomb",
                    "type": "Button",
                    "id": "d168b707-1e44-4f5f-a4bf-17a832a8eddb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0efda2a5-7e7e-4e12-89e4-3d19666c6ae2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9208b491-f5c7-42b9-84a2-12bb341e5d7b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f10b0b19-4220-4c51-9255-8ef85e092dc7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e58fc5b-fc6d-4016-b9f0-dcd37989a41d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b0e3182-57d5-42d0-924c-2e877dd88b6f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77b146ba-0f81-4094-9d74-2aaa941a0467",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11ba5ed2-7cab-4490-84ff-9fe521f19958",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fffdb7d-3eae-404a-a012-1d81829a5df2",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f0b3184-f552-464a-9ed2-55c33a58f562",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bomb",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Game",
            "id": "b1fc350b-9963-4042-859c-27306f6c4723",
            "actions": [
                {
                    "name": "ReStart",
                    "type": "Button",
                    "id": "4125d8c3-73f8-4a85-bfbc-710b7cabbb5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Redo",
                    "type": "Button",
                    "id": "30d751ee-717e-4935-9b95-9433378b29f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "d7cd2542-4194-460c-9f58-27b00d59326f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "833b5b10-6707-45d0-a1bd-cb87296a8281",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6d5c4f3-2039-4a22-86d5-793b91ed49c3",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fa34c8a-6cc8-41c9-870b-878c0bffb779",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}